--- a/LocationTracking/LocationTracking/en.lproj/Localizable.strings
+++ b/LocationTracking/LocationTracking/en.lproj/Localizable.strings
@@ -53,12 +53,8 @@
 "PLACE_HOLDER_CONFIRM_PASSWORD"     = "confirm password";
 
 //NOTIFY
-
-
-
-
-
-
+"ADD_NEW_LOCATION"                  = "Add new location";
+"SEARCH_EXISTS_LOCATION"             = "Search exists location";
 
 
 
