--- a/LocationTracking/LocationTracking/en.lproj/Localizable.strings
+++ b/LocationTracking/LocationTracking/en.lproj/Localizable.strings
@@ -35,6 +35,7 @@
 "UPDATE"                            = "Update";
 "SIGN_IN"                           = "Sign in";
 "SIGN_UP"                           = "Sign up";
+"OK"                                = "OK";
 
 //CONTACT LIST
 "SEGMENTED_CONTACTS_TITTLE"         = "Contacts";
@@ -52,9 +53,19 @@
 "PLACE_HOLDER_NEW_PASSWORD"         = "new password";
 "PLACE_HOLDER_CONFIRM_PASSWORD"     = "confirm password";
 
+"PLACE_HOLDER_MESSAGE"              = "Message";
+"PLACE_HOLDER_NEW_LOCATION"         = "New location";
+
 //NOTIFY
 "ACTION_SHEET_ADD_NEW_LOCATION"     = "Add new location";
 "ACTION_SHEET_SEARCH_EXISTS_LOCATION"      = "Search exists location";
 
+"ALERT_INFO_SIGN_UP"                = "Please input username, email exactly";
+"LATITUDE"                          = "Latitude: %.10f";
+"LONGITUDE"                         = "Longitude: %.10f";
 
-
+"TOAST_SHARED_LOCATION"             = "You shared location";
+"TOAST_STOPED_LOCATION"             = "You shared location";
+"TOAST_INPUT_LOCATION_NAME"         = "Please input location name";
+"TOAST_SAVE_LOCATION_SUCCESSFULLY"  = "Saved new location successfully.";
+"TOAST_SELECT_CONTACT_TO_CHAT"      = "Please select contact to chat";
