--- a/LocationTracking/LocationTracking/ja.lproj/Localizable.strings
+++ b/LocationTracking/LocationTracking/ja.lproj/Localizable.strings
@@ -36,6 +36,7 @@
 "SIGN_IN"                               = "サインイン";
 "SIGN_UP"                               = "サインアップ";
 "OK"                                    = "はい";
+"FOTGOT_PASSWORD"                       = "パスワードをお忘れですか";
 
 //CONTACT LIST
 "SEGMENTED_CONTACTS_TITTLE"             = "コンタクト";
@@ -56,11 +57,24 @@
 "PLACE_HOLDER_MESSAGE"                  = "メッセージ";
 "PLACE_HOLDER_NEW_LOCATION"             = "新しい場所";
 
+"PLACE_HOLDER_SEARCH_CONTACT_NAME"  = "連絡先を検索するための入力名";
+"PLACE_HOLDER_SEARCH_LOCATION_NAME" = "入力された場所の名前";
+
 //NOTIFY
 "ACTION_SHEET_ADD_NEW_LOCATION"         = "新しい場所を追加";
 "ACTION_SHEET_SEARCH_EXISTS_LOCATION"   = "場所を検索存在します";
 
+"ALERT_CONFIRM_TITLE"                   = "確かめる";
+"ALERT_CONFIRM_SHARE_LOCATION"          = "この友だちとあなたの場所を共有しますか。";
+"ALERT_CONFIRM_SIGN_OUT"                = "サインアウトしますか";
 "ALERT_INFO_SIGN_UP"                    = "ユーザー名を入力し、正確にメールしてください";
+"ALERT_CONFIRM_DELETE_GROUP"            = "あなたはグループを削除しますか: ";
+"ALERT_CONFIRM_DELETE_CONTACT"      = "連絡先を削除しますか: ";
+"ALERT_CONFIRM_DELETE_LOCATION"     = "場所を削除しますか: ";
+"ALERT_ERROR_TITLE"                 = "エラー";
+"ALERT_AGAIN_INFO"                  = "もう一度古いパスワード、新しいパスワードを確認し、パスワードを確認してください";
+"ALERT_CONFIRM_DELETE_MEMBER"       = "このメンバーを削除してもよろしいですか。";
+
 "LATITUDE"                              = "緯度: %.10f";
 "LONGITUDE"                             = "経度: %.10f";
 
@@ -70,3 +84,16 @@
 "TOAST_INPUT_LOCATION_NAME"             = "地名を入力してください";
 "TOAST_SAVE_LOCATION_SUCCESSFULLY"      = "新しい場所が正常に保存されました";
 "TOAST_SELECT_CONTACT_TO_CHAT"          = "チャットする連絡先を選択してください";
+"TOAST_PASSWORD_LENGTH"                 = "パスワードは6文字以上でなければなりません";
+"TOAST_PASSWORD_USER_NAME_WRONG"        = "メールまたはパスワードが間違っています。\ nもう一度ご確認ください。";
+"TOAST_INPUT_EMAIL_FORGOT_PASSWORD"     = "あなたのメールアドレスを入力してください";
+"TOAST_SENT_PASSWORD_TO_MAIL"           = "新しいパスワードがメールに送信されました。メールを確認してください";
+"TOAST_SELECT_CONTACT_FROM_LIST"        = "リストから連絡先を選択してください。";
+"TOAST_NOT_SHARED_LOCATION"             = "共有されていない。";
+"TOAST_USER_NAME_EMPTY"                 = "ユーザー名と電子メールは空です。";
+"TOAST_SUCCESSFULLY"                    = "うまく";
+"TOAST_CHANGE_PASSWORD_SUCCESSFULLY"    = "パスワードを正常に変更しました。";
+"TOAST_SELECT_LOCATION_FROM_LIST"       = "リストから場所を選択してください。";
+"TOAST_ONLY_OWNER_REMOVE_MEMBER"        = "オーナーのみがメンバーを削除できます。";
+"TOAST_ADD_CONTACT_TO_GROUP"            = "このグループに連絡先を追加してください。";
+"TOAST_INPUT_GROUP_NAME"                = "グループ名を入力してください。";
