--- a/LocationTracking/LocationTracking/ja.lproj/Localizable.strings
+++ b/LocationTracking/LocationTracking/ja.lproj/Localizable.strings
@@ -8,6 +8,9 @@
 
 "COUNTRY_CODE" = "ja";
 
+"en" = "えご";
+"ja" = "日本語";
+
 // MAP
 "MAP_TITTLE"                            = "ロケーションを観察";
 "ADD_NEW_CONTACT"                       = "コンタクト";
