--- a/LocationTracking/LocationTracking/ja.lproj/Localizable.strings
+++ b/LocationTracking/LocationTracking/ja.lproj/Localizable.strings
@@ -96,7 +96,7 @@
 "TOAST_USER_NAME_EMPTY"                 = "アカウントとメールが無い。";
 "TOAST_SUCCESSFULLY"                    = "完了した";
 "TOAST_CHANGE_PASSWORD_SUCCESSFULLY"    = "パスワードを変更するのは完了した。";
-"TOAST_SELECT_LOCATION_FROM_LIST"       = "リストから場所を選択してください。";
+"TOAST_SELECT_LOCATION_FROM_LIST"       = "リストのロケーションを１つ選択してください。";
 "TOAST_ONLY_OWNER_REMOVE_MEMBER"        = "オーナーのみがメンバーを削除できます。";
 "TOAST_ADD_CONTACT_TO_GROUP"            = "このグループへ移動するのためにコンタクトを選択してください";
 "TOAST_INPUT_GROUP_NAME"                = "グループ名を入力して下さい";
